--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
   <title>Sarfam Buildcon - Reports</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 50px;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
     }
     iframe {
-      width: 800px;
-      height: 500px;
+      width: 100%;
+      height: 100%;
       border: none;
     }
   </style>
 </head>
 <body>
-
-  <h2>Stock Report</h2>
-
   <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vScl_k_rcg23ksEq4MmKUKzRL-MInWQfsBJ9KNUh9rkehx5fukSHL6jDYAymRoS0UrVnUaj91KWpHv1/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-
 </body>
 </html>
+
