--- a/index.html
+++ b/index.html
@@ -1,55 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Responsive Charts</title>
+  <title>My Looker Studio Dashboard</title>
   <style>
     body {
       margin: 0;
+      padding: 40px;
       font-family: Arial, sans-serif;
       background: #f8f8f8;
-      padding: 40px;
     }
 
-    h1 {
-      text-align: center;
-      color: #333;
-      margin-bottom: 40px;
-    }
-
-    .charts {
-      display: grid;
-      grid-template-columns: 1fr; /* mobile: 1 column */
-      gap: 40px; /* space between charts */
+    .report-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
+      overflow: hidden;
+      border: 1px solid #ccc;
+      border-radius: 8px;
       max-width: 1200px;
       margin: 0 auto;
     }
 
-    iframe {
+    .report-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: 500px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      background: #fff;
-    }
-
-    /* When screen is wider than 768px, switch to 2 columns */
-    @media (min-width: 768px) {
-      .charts {
-        grid-template-columns: 1fr 1fr; /* 2 columns */
-      }
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
 <body>
 
-  <h1>My Embedded Charts</h1>
+  <h1 style="text-align: center;">My Looker Studio Dashboard</h1>
 
-  <div class="charts">
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vScl_k_rcg23ksEq4MmKUKzRL-MInWQfsBJ9KNUh9rkehx5fukSHL6jDYAymRoS0UrVnUaj91KWpHv1/pubchart?oid=223011665&amp;format=interactive"></iframe>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vScl_k_rcg23ksEq4MmKUKzRL-MInWQfsBJ9KNUh9rkehx5fukSHL6jDYAymRoS0UrVnUaj91KWpHv1/pubchart?oid=1292832411&amp;format=interactive"></iframe>
-    <!-- Add more charts as needed: -->
-    <!-- <iframe src="YOUR_THIRD_PUBCHART_URL"></iframe> -->
-    <!-- <iframe src="YOUR_FOURTH_PUBCHART_URL"></iframe> -->
+  <div class="report-container">
+    <iframe src="https://lookerstudio.google.com/embed/reporting/63abe044-6425-4988-a189-a2ebceb6ec63/page/6fLSF" allowfullscreen></iframe>
   </div>
 
 </body>
